--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.5
 click==7.1.1
 Flask==1.1.1
 flask-marshmallow==0.11.0
@@ -6,6 +7,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 marshmallow==3.5.1
+marshmallow-sqlalchemy==0.22.3
+pep8==1.7.1
+pycodestyle==2.5.0
 six==1.14.0
 SQLAlchemy==1.3.15
 Werkzeug==1.0.0
